# py_ble_manager

./: .gitignore  Ble.py  BleAdapter.py  BleCommon.py  BleDevParams.py  BleGap.py  BleManager.py  BleManagerGap.py  BleManagerGattc.py  BleManagerGatts.py  BleManagerStorage.py  DCI_log_20230419-124456.txt  Gap.py  GtlWaitQueue.py  LICENSE.txt  MANIFEST.in  MessageRouter.py  README.md  SerialCallbackManager.py  SerialManagerCallback.py  SerialManagerStream.py  SerialStreamManager.py  adv_test.py  asyncio_test.py  co_bt.py  defined_messages.txt  gap.py  gapm_messages.py  gapm_task.py  gtl_message_base.py  gtl_message_gapm.py  gtl_message_gapm_unit_test.py  gtl_test.py  main.py  main_central.py  main_periph.py  pyproject.toml  rwble_hl_error.py  rwip_config.py  sandbox.py  (+3 more)
.github/workflows/: ci.yml  docs.yml  docs_aws.yml  python-app.yml
adapter/: BleAdapter.py  MessageParser.py  SerialStreamManager.py
assets/: PythonGtl.drawio
ble_api/: Ble.py  BleApiBase.py  BleAtt.py  BleCentral.py  BleCommon.py  BleConfig.py  BleDeviceBase.py  BleGap.py  BleGapApi.py  BleGatt.py  BleGattc.py  BleGattcApi.py  BleGatts.py  BleGattsApi.py  BlePeripheral.py  BleStorageApi.py  BleUuid.py
ble_devices/: BleCentral.py  BleDeviceBase.py  BlePeripheral.py  __init__.py
devices/: BleCentral.py  BleCentralPeripheral.py  BlePeripheral.py
docs/: architecture.md  requirements.txt
docs/source/: architecture.rst  basic_usage.rst  conf.py  hardware_setup.rst  index.rst  programming_util.rst  quickstart.rst
example/central_at_command/: README.md  central_at_command_cli.py
example/central_crash_info/: central_crash_info.py  debug_crash_info.py
example/peripheral/: main_periph.py
examples/: test_import.py
examples/0_central_simple_scan/: central_simple_scan.py
examples/1_central_simple_connect/: README.md  central_simple_connect.py
examples/2_central_cli/: README.md  central_cli.py
examples/3_central_crash_info/: README.md  central_crash_info.py
examples/central_at_command/: README.md  central_at_command_cli.py
examples/central_at_command_cli/: README.md  central_at_command_cli.py
examples/central_cli/: README.md  central_cli.py
examples/central_crash_info/: README.md  central_crash_info.py
examples/central_simple_connect/: README.md  central_simple_connect.py
examples/central_simple_scan/: central_simple_scan.py
gtl_messages/: __init__.py  abstract_gtl_message.py  gapc_message_factory.py  gapm_message_factory.py  gattc_message_factory.py  gattm_message_factory.py  gtl_message_base.py  gtl_message_factory.py  gtl_message_gapc.py  gtl_message_gapm.py  gtl_message_gattc.py  gtl_message_gattm.py
gtl_port/: att.py  attm.py  co_bt.py  co_error.py  gap.py  gapc.py  gapc_task.py  gapm_task.py  gattc_task.py  gattm.py  gattm_task.py  smpc.py
manager/: BleDevParams.py  BleManager.py  BleManagerBase.py  BleManagerCommon.py  BleManagerCommonMsgs.py  BleManagerGap.py  BleManagerGapMsgs.py  BleManagerGattc.py  BleManagerGattcMsgs.py  BleManagerGatts.py  BleManagerGattsMsgs.py  BleManagerStorage.py  GtlWaitQueue.py
serial_manager/: SerialStreamManager.py
services/: BleService.py  CustomBleService.py  DeviceInformationService.py
tests/: test_gtl_message_gapc.py  test_gtl_message_gapm.py  test_gtl_message_gattc.py  test_gtl_message_gattm.py
util/: README.md  flash_py_ble_manager_bin.py
(+148 files in other folders)
