[metadata]
name = python_gtl_trhead
version = 1.0
author = <Patrick Murphy>
author_email = 
description = A python library for controlling Renesas BLE devices
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Renesas-US-Connectivity/python_gtl_thread
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src

[options.packages.find]
where=src
include = *