[metadata]
name = py_ble_manager
version = 1.0.0
author = Patrick Murphy
author_email = 
description = A python library for controlling Renesas BLE devices
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Renesas-US-Connectivity/py_ble_manager
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.10.5
install_requires =
    pyserial>=3.5
    prompt_toolkit>=3.0.38
[options.packages.find]
where=src
include = *